@@ -12,72 +12,24 @@
 
 #include "../common/utils.h"
 
-#ifdef STXXL_USE_POSIX_MEMALIGN_ALLOC
-#define _XOPEN_SOURCE 600
-#include <stdlib.h>
-#include <malloc.h>
-#endif
-
 
 __STXXL_BEGIN_NAMESPACE 
 
-#ifdef STXXL_USE_POSIX_MEMALIGN_ALLOC
-
 template < size_t ALIGNMENT > 
-inline void * aligned_alloc (size_t size)
+inline void * aligned_alloc (size_t size, size_t meta_info_size = 0)
 {
-	void * result;
-	STXXL_VERBOSE1("stxxl::aligned_alloc<"<<ALIGNMENT <<
-		">() POSIX VERSION asking for "<<size<<" bytes");
-	int status = posix_memalign(&result,ALIGNMENT,size);
-	
-	if(status != 0)
-	{
-		// error occured
-		switch(status)
-		{
-			case EINVAL:
-				STXXL_ERRMSG("posix_memalign call failed with status code EINVAL")
-				break;
-			case ENOMEM:
-				STXXL_ERRMSG("posix_memalign call failed with status code ENOMEM")
-				break;
-			default:
-				STXXL_ERRMSG("posix_memalign call failed with status code "<<status)
-		}
-		abort();
-	}
-	STXXL_VERBOSE1("stxxl::aligned_alloc<"<<ALIGNMENT <<
-		">() POSIX VERSION asking for "<<size<<
-	    " bytes,  returning block starting at "<<result);
-	
-	return result;
-};
-
-template < size_t ALIGNMENT > inline void
-aligned_dealloc (void *ptr)
-{
-	STXXL_VERBOSE1("stxxl::aligned_dealloc<"<<ALIGNMENT <<">() POSIX VERSION, ptr = "<<ptr) 
-	free(ptr);
-};
-
-#else
-
-template < size_t ALIGNMENT > 
-inline void * aligned_alloc (size_t size)
-{
-	STXXL_VERBOSE1("stxxl::aligned_alloc<"<<ALIGNMENT <<">(), size = "<<size) 
-    // TODO: use posix_memalign() and free() on Linux
-	char *buffer = new char[size + ALIGNMENT];
-	char *result = buffer + ALIGNMENT - (((unsigned long) buffer) % (ALIGNMENT));
-	STXXL_VERBOSE1("stxxl::aligned_alloc<"<<ALIGNMENT <<">() address "<<long(result)
-		<< " lost "<<unsigned(result-buffer)<<" bytes")
-	assert( unsigned(result-buffer) >= sizeof(char*) );
+	STXXL_VERBOSE1("stxxl::aligned_alloc<"<<ALIGNMENT <<">(), size = "<<size<<", meta info size = "<<meta_info_size) 
+	char *buffer = new char[size + ALIGNMENT + sizeof(char*) + meta_info_size];
+	char *reserve_buffer = buffer + sizeof(char*) + meta_info_size;
+	char *result = reserve_buffer + ALIGNMENT - 
+		(((unsigned long) reserve_buffer) % (ALIGNMENT)) - meta_info_size;
+	STXXL_VERBOSE1("stxxl::aligned_alloc<"<<ALIGNMENT <<">() address 0x"<<std::hex<<long(result)
+		<< std::dec<<" lost "<<unsigned(result-buffer)<<" bytes")
+	assert( int(result-buffer) >= int(sizeof(char*)) );
 	*(((char **) result) - 1) = buffer;
 	STXXL_VERBOSE1("stxxl::aligned_alloc<"<<ALIGNMENT <<
 		">(), allocated at "<<std::hex <<((unsigned long)buffer)<<" returning "<< ((unsigned long)result)
 		<<std::dec) 
-	//abort();
 	
 	return result;
 };
@@ -85,11 +37,11 @@ inline void * aligned_alloc (size_t size)
 template < size_t ALIGNMENT > inline void
 aligned_dealloc (void *ptr)
 {
-	STXXL_VERBOSE2("stxxl::aligned_dealloc(<"<<ALIGNMENT <<">), ptr = "<<long(ptr)) 
+	STXXL_VERBOSE2("stxxl::aligned_dealloc(<"<<ALIGNMENT <<">), ptr = 0x"<<std::hex<<(unsigned long)(ptr)<<std::dec) 
 	delete[] * (((char **) ptr) - 1);
 };
 
-#endif
+
 
 __STXXL_END_NAMESPACE
 #endif
